# sneze

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt  CONTRIBUTING.md  Doxyfile  GETTING_STARTED.MD  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: annotated.html  annotated_dup.js  application_8hpp_source.html  classes.html  classsneze_1_1application-members.html  classsneze_1_1application.html  classsneze_1_1application.js  classsneze_1_1components_1_1color-members.html  classsneze_1_1components_1_1color.html  classsneze_1_1components_1_1color.js  classsneze_1_1components_1_1color__coll__graph.map  classsneze_1_1components_1_1color__coll__graph.md5  classsneze_1_1config-members.html  classsneze_1_1config.html  classsneze_1_1config.js  classsneze_1_1effects__system-members.html  classsneze_1_1effects__system.html  classsneze_1_1effects__system.js  classsneze_1_1effects__system__coll__graph.md5  classsneze_1_1effects__system__inherit__graph.map  classsneze_1_1effects__system__inherit__graph.md5  classsneze_1_1error-members.html  classsneze_1_1error.html  classsneze_1_1error.js  classsneze_1_1font-members.html  classsneze_1_1font.html  classsneze_1_1font.js  classsneze_1_1font__coll__graph.map  classsneze_1_1font__inherit__graph.md5  classsneze_1_1keyboard_1_1key-members.html  classsneze_1_1keyboard_1_1key.html  classsneze_1_1keyboard_1_1key.js  classsneze_1_1keyboard_1_1modifier-members.html  classsneze_1_1keyboard_1_1modifier.html  classsneze_1_1keyboard_1_1modifier.js  classsneze_1_1keys__system-members.html  classsneze_1_1keys__system.html  classsneze_1_1keys__system.js  classsneze_1_1keys__system__coll__graph.map  classsneze_1_1keys__system__coll__graph.md5  (+563 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+72 more)
doxy/: Doxyfile  doxy.in  doxy.sh
doxy/additional/: namespace.dox
example/: CMakeLists.txt
example/media/fonts/pathway_gothic_one/: pathway_gothic_one.bmfc
example/resources/fonts/: pathway_gothic_one.fnt
example/src/: ExampleGame.cpp  ExampleGame.h  counter_system.cpp  counter_system.hpp  example.cpp  example_game.cpp  example_game.h  example_game.hpp
examples/: CMakeLists.txt  README.md
examples/draw/: CMakeLists.txt
examples/draw/src/: draw.cpp  draw_game.cpp  draw_game.hpp
examples/hello/: CMakeLists.txt
examples/hello/src/: hello.cpp  hello_game.cpp  hello_game.hpp
examples/labels/: CMakeLists.txt
examples/labels/src/: labels.cpp  labels_game.cpp  labels_game.hpp
examples/media/fonts/Mystery_Quest/: mystery_quest.bmfc
examples/media/fonts/fira_mono/: fira_mono.bmfc
examples/resources/fonts/: mystery_quest.fnt  tilt_warp.fnt
examples/resources/sprites/: robot.json  sneze.json
examples/resources/sprites/kawaii-ghost/: kawaii-ghost.json
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: counter_system.cpp  counter_system.hpp  sandbox.cpp  sandbox_game.cpp  sandbox_game.hpp
examples/settings/: CMakeLists.txt
examples/settings/src/: settings.cpp  settings_game.cpp  settings_game.hpp
examples/shapes/: CMakeLists.txt
examples/shapes/src/: shapes.cpp  shapes_game.cpp  shapes_game.hpp
examples/sprites/: CMakeLists.txt
examples/sprites/src/: sprites.cpp  sprites_game.cpp  sprites_game.hpp
lib/: CMakeLists.txt  list_headers.ps1  list_headers.sh
lib/embedded/fonts/: fira_mono.fnt  tilt_warp.fnt
lib/include/: Application.h  application.h  config.h  error.h  logger.h  result.h  sneze.h
lib/include/sneze/: application.h  config.h  error.h  logger.h  result.h  sneze.h  sneze.hpp
lib/include/sneze/app/: application.h  application.hpp  config.h  config.hpp  settings.hpp  setup.hpp  world.hpp
lib/include/sneze/base/: color.hpp
lib/include/sneze/components/: color.hpp  components.hpp  generic.hpp  geometry.hpp  renderable.hpp  ui.hpp
lib/include/sneze/device/: keyboard.hpp  mouse.hpp
lib/include/sneze/effects/: effects.hpp  effects_system.hpp
lib/include/sneze/embedded/: embedded.hpp
lib/include/sneze/events/: events.hpp
lib/include/sneze/globals/: globals.hpp
lib/include/sneze/platform/: error.h  error.hpp  logger.hpp  result.h  result.hpp  span_istream.hpp  traits.hpp  type_name.hpp  version.hpp
lib/include/sneze/render/: font.hpp  render.hpp  resource.hpp  sprite_sheet.hpp  texture.hpp
lib/include/sneze/system/: logger.h  logger.hpp
lib/include/sneze/systems/: event_system.hpp  keys_system.hpp  layout_system.hpp  render_system.hpp  sdl_events_system.hpp  system.hpp
lib/media/fonts/tilt_warp/: tilt_warp.bmfc
lib/media/sprites/: sneze.xcf
lib/src/: Application.cpp  application.cpp  config.cpp  logger.cpp
lib/src/app/: application.cpp  config.cpp  settings.cpp  setup.cpp  world.cpp
lib/src/base/: color.cpp
lib/src/components/: color.cpp  renderable.cpp
lib/src/device/: keyboard.cpp
lib/src/effects/: effects_system.cpp
lib/src/platform/: error.cpp  logger.cpp  result.cpp  span_istream.cpp
lib/src/render/: font.cpp  render.cpp  sprite_sheet.cpp  texture.cpp
lib/src/system/: logger.cpp
lib/src/systems/: event_system.cpp  keys_system.cpp  layout_system.cpp  render_system.cpp  sdl_events_system.cpp
tools/: CMakeLists.txt
tools/dump/: CMakeLists.txt
tools/dump/src/: dump.cpp
